--- a/CHANGES
+++ b/CHANGES
@@ -8,9 +8,17 @@ most recent build should be at the top of this file.
 
 Thanks!
 
+3.5.0 rc 1
+----------
+- Initial adaptations to macOS Mojave's dark mode (work in progress)
+- Improve right to left support
+- Improve tab bar management ; fix video which continued to play when last tab was closed
+- Fix background color of selected folder on OS X 10.9
+- Update FMDB to 2.7.5
+
 3.5.0 Beta 1
 ------------
-- Modernize network access (replace ASIHTTPRequest with a wrapper above NSURLSession)
+- Modernize network access (replace ASIHTTPRequest with a wrapper above NSURLSession). Vienna's memory management is now exclusively based on Automatic Reference Counting.
 - Fix an encoding issue in localizable strings
 
 3.4.2
